# pre-commit-merge-files-content-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  setup.py
pre_commit_merge_content_hooks/: merge_files_content.py
