[metadata]
name = pre_commit_merge_content_hooks
version = 1.0.0
description = pre-commit hooks for merging content from different files to one
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bg-open-source/pre-commit-merge-files-content-hooks
author = Daria Baranova
author_email = darya.baranova@softhub.by

[options]
packages = pre_commit_merge_content_hooks
python_requires = >=3.11.0

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    merge-files-content-hook = pre_commit_merge_content_hooks.merge_files_content:main

[options.extras_require]
dev =
    pytest==7.3.1
    Faker==18.9.0
test =
    pytest==7.3.1
    Faker==18.9.0
